web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-name/module-parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,34)
2|    const child = async function await() {
 |                                ^
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,34)
2|    const child = async function await() {
 |                                ^
